2019/04/11 ver1.0.9
Skil encode check due to lack of understanding.

2019/04/07 ver1.0.8
Fix: Deny to open file if detected codec can not convert byte to
text and vice versa.

2019/03/21 ver1.0.7
Add ICU

2019/03/18 ver1.0.6
Implement codec

2019/03/14 ver1.0.5
Fix when no bom

2019/03/14 ver1.0.4
BOM and no backup

2019/03/13 ver1.0.3
rebuild with different Qt because previous version is not run

2019/03/13 ver1.0.2
Word wrap

2019/03/13 ver1.0.1
add icon

2019/03/13 ver1.0.0
first